--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "build": "vite build",
+    "dev": "vite",
+    "start": "vite preview --host",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
@@ -18,8 +18,8 @@
     "axios": "^1.9.0",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-query": "^3.39.3",
+    "react-dom": "^19.0.0",
+    "@tanstack/react-query": "^5.28.0",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.6.0"
   },
